fix alignment

--- a/src/sass/table.scss
+++ b/src/sass/table.scss
@@ -23,3 +23,8 @@
         overflow-x: scroll;
     }
 }
+
+.table-action-container {
+    display: flex;
+    justify-content: end;
+}
